--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -23,6 +23,10 @@
     transform: scale(1.02);
     opacity: 0.9;
   }
+
+  @media (max-width: 768px) {
+    font-size: 1rem;
+  }
 }
 
 .logo {
@@ -34,6 +38,11 @@
 
   &:hover {
     transform: rotate(5deg);
+  }
+
+  @media (max-width: 768px) {
+    inline-size: 40px;
+    block-size: 40px;
   }
 }
 
@@ -73,10 +82,6 @@
   }
 
   @media (max-width: 768px) {
-    gap: 16px;
-
-    a {
-      font-size: 0.8rem;
-    }
+    display: none; // Скрываем обычное меню на мобильных устройствах
   }
 }
