--- a/src/components/MainLayout/MainLayout.module.scss
+++ b/src/components/MainLayout/MainLayout.module.scss
@@ -3,6 +3,7 @@
   align-items: stretch;
   flex-direction: column;
   justify-content: flex-start;
+  background-color: var(--contrast-bg-color);
   block-size: 100dvh;
   gap: 0;
 }
@@ -14,6 +15,13 @@
   flex-direction: column;
   flex-grow: 1;
   justify-content: space-between;
+  padding: 50px 50px;
   block-size: 100%;
   gap: 20px;
+}
+
+.contentWrapper {
+  padding: 30px;
+  border-radius: 10px;
+  background-color: var(--main-bg-color);
 }
