--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -35,7 +35,8 @@
   margin-top: 40px;
 }
 
-.gradientButton {
+.startBtn {
+  font-size: 16px;
   font-weight: 600;
   line-height: 1.5;
   position: relative;
@@ -49,7 +50,9 @@
   border-radius: 12px;
   background: linear-gradient(90deg, #1f1f23, #2a2a30);
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+
   gap: 8px;
+
 
   // Контейнер для текста
   span {
