--- a/src/components/MainLayout/MainLayout.module.scss
+++ b/src/components/MainLayout/MainLayout.module.scss
@@ -1,5 +1,6 @@
 .mainLayout {
   display: flex;
+  overflow-y: auto;
   align-items: stretch;
   flex-direction: column;
   justify-content: flex-start;
@@ -10,17 +11,18 @@
 
 .mainWrapper {
   display: flex;
-  overflow-y: auto;
   align-items: stretch;
   flex-direction: column;
   flex-grow: 1;
   justify-content: space-between;
+  margin: 0 auto;
   padding: 50px;
   block-size: 100%;
   gap: 20px;
+  max-inline-size: 1200px;
 
   @media (max-width: 768px) {
-    padding: 10px;
+    padding: 40px 10px;
   }
 }
 
