--- a/src/components/MainLayout/MainLayout.module.scss
+++ b/src/components/MainLayout/MainLayout.module.scss
@@ -31,3 +31,7 @@
   border-radius: 10px;
   background-color: var(--main-bg-color);
 }
+
+.homePageContent {
+  background-color: var(--contrast-bg-color);
+}
