Добавлены компоненты NavigationButton и NavigationControls. Обновлены компоненты ListItem и WelcomePage: добавлена поддержка вложенных списков. Обновлены стили для TitleBlock и WelcomePage.

--- a/src/components/ListItem/ListItem.module.scss
+++ b/src/components/ListItem/ListItem.module.scss
@@ -12,3 +12,8 @@
     font-size: 0.875rem;
   }
 }
+
+// Убираем маркер для ListItem, содержащих вложенный список
+.hasNestedList {
+  list-style-type: none;
+}
