--- a/src/components/TitleBlock/TitleBlock.module.scss
+++ b/src/components/TitleBlock/TitleBlock.module.scss
@@ -1,5 +1,5 @@
 .titleBlock {
-  padding: 40px;
+  padding: 40px 0;
   text-align: center;
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   margin-block-start: 20px;
@@ -20,7 +20,7 @@
 
 @media (max-width: 768px) {
   .titleBlock {
-    padding: 30px;
+    padding: 30px 0;
   }
 
   .title {
