--- a/src/pages/WelcomePage/WelcomePage.module.scss
+++ b/src/pages/WelcomePage/WelcomePage.module.scss
@@ -1,7 +1,25 @@
-.title {
+.specsTable {
+  width: 100%;
+  margin-bottom: 20px;
+  border-collapse: collapse;
 
-}
+  tr {
+    border-bottom: 1px solid var(--border-color, #e0e0e0);
 
-.titles {
-  text-align: center;
+    &:last-child {
+      border-bottom: none;
+    }
+  }
+
+  td {
+    padding: 12px 0;
+
+    &:first-child {
+      text-align: left;
+    }
+
+    &:last-child {
+      text-align: right;
+    }
+  }
 }
