Удален <hr /> из WelcomePage, обновлены отступы в стилях NavigationControls.

--- a/src/components/NavigationControls/NavigationControls.module.scss
+++ b/src/components/NavigationControls/NavigationControls.module.scss
@@ -1,7 +1,7 @@
 .navigationControls {
   display: flex;
   justify-content: space-between;
-  margin: 40px 0;
+  margin: 40px 0 20px 0;
   padding: 20px 0;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
 
