Обновлен компонент TextHighlight: добавлена поддержка подчеркивания через новый проп "underline". Дополнена CommonInstructionsPage: новый текстовый контент и обновленный стиль для подчеркивания.

--- a/src/components/TextHighlight/TextHighlight.module.scss
+++ b/src/components/TextHighlight/TextHighlight.module.scss
@@ -1,3 +1,8 @@
 .highlight {
   color: var(--text-primary-color);
 }
+
+.underline {
+  text-decoration: underline;
+  text-underline-offset: 4px;
+}
