--- a/src/components/Mod/Mod.module.scss
+++ b/src/components/Mod/Mod.module.scss
@@ -32,6 +32,10 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 16px;
+
+    @media (max-width: 768px) {
+      flex-direction: column-reverse;
+    }
   }
 
   &__tags {
@@ -42,6 +46,13 @@
     align-self: flex-start;
     flex-shrink: 0;
     width: auto;
+
+    @media (max-width: 768px) {
+      justify-content: flex-end;
+      margin-bottom: 12px;
+      width: 100%; /* Make sure it spans full width in mobile view */
+      display: flex; /* Change from inline-flex to flex for full width */
+    }
   }
 
   &__info {
