Добавлены стили для нового компонента "TableOfContents", который отображает оглавление страницы. Обновлены стили в "MainLayout" для центрирования контента на больших экранах. Внедрена логика для отслеживания активного элемента оглавления при прокрутке. Добавлен новый хук "useTableOfContents" для управления состоянием оглавления.

--- a/src/components/MainLayout/MainLayout.module.scss
+++ b/src/components/MainLayout/MainLayout.module.scss
@@ -30,7 +30,11 @@
     margin: 30px 15px;
   }
 
-
+  // На больших экранах contentWrapper остается по центру
+  @media (min-width: 1401px) {
+    margin: 30px auto;
+    max-inline-size: 1200px;
+  }
 }
 
 .homePageContent {
