--- a/src/components/MainLayout/MainLayout.module.scss
+++ b/src/components/MainLayout/MainLayout.module.scss
@@ -34,6 +34,7 @@
   @media (min-width: 1401px) {
     margin: 30px auto;
     max-inline-size: 1200px;
+    // Сайдбар позиционируется поверх контента справа
   }
 }
 
