Обновлены стили для компонентов "DropdownMenu" и "Header": увеличен z-index для корректного отображения поверх сайдбара, улучшены отступы и радиусы скругления. Оптимизированы переходы для более плавной анимации. Исправлены комментарии для большей ясности.

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -7,6 +7,8 @@
   inline-size: 100%;
   block-size: 70px;
   border-block-end: 3px solid var(--contrast-bg-color);
+  position: relative;
+  z-index: 15; // Увеличиваем z-index, чтобы хедер был поверх сайдбара
 }
 
 .logoContainer {
