--- a/src/components/DropdownMenu/DropdownMenu.module.scss
+++ b/src/components/DropdownMenu/DropdownMenu.module.scss
@@ -12,21 +12,25 @@
   transition: color 0.2s ease;
   color: var(--text-color);
 
-  &:hover, &.active {
+  &:hover,
+  &.active {
     color: #919198; // As specified in the requirements
   }
 }
 
 .dropdownMenu {
   position: absolute;
-  z-index: 10;
+  z-index: 20; // Увеличиваем z-index, чтобы меню было поверх сайдбара
   top: 100%;
   left: 0;
   visibility: hidden;
   min-width: 200px;
   margin-top: 5px;
   padding: 12px 0; // Increased padding
-  transition: opacity 0.3s ease, visibility 0.3s ease, transform 0.3s ease;
+  transition:
+    opacity 0.3s ease,
+    visibility 0.3s ease,
+    transform 0.3s ease;
   transform: translateY(-10px);
   opacity: 0;
   border-radius: 12px; // Increased border radius
@@ -44,7 +48,9 @@
   display: block;
   margin: 8px 16px; // Added margin for better spacing
   padding: 12px 20px; // Increased padding
-  transition: color 0.2s ease, background-color 0.2s ease;
+  transition:
+    color 0.2s ease,
+    background-color 0.2s ease;
   text-decoration: none;
   color: var(--text-color);
   border-radius: 8px; // Rounded corners for items
