--- a/src/components/TableOfContents/TableOfContents.module.scss
+++ b/src/components/TableOfContents/TableOfContents.module.scss
@@ -91,6 +91,9 @@
   line-height: 1.4;
   opacity: 0.7;
   position: relative;
+  user-select: none; // Убираем выделение текста при клике
+  -webkit-tap-highlight-color: transparent; // Убираем выделение на мобильных устройствах
+  -webkit-touch-callout: none; // Убираем контекстное меню на мобильных устройствах
 
   // Обрезание длинного текста с многоточием
   white-space: nowrap;
@@ -106,6 +109,12 @@
     outline: none;
     background: rgba(255, 255, 255, 0.05);
     opacity: 1;
+  }
+
+  &:active {
+    background: rgba(255, 255, 255, 0.05);
+    opacity: 1;
+    transform: none; // Убираем эффект нажатия
   }
 
   &.active {
